--- a/dribbble/src/main/res/layout/recycler_view_item.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item.xml
@@ -15,6 +15,7 @@
 
 
         <ImageView
+            android:id="@+id/image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher"/>
