--- a/dribbble/src/main/res/layout/recycler_view_item.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
 
-        <ImageView
+        <com.loopj.android.image.SmartImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
