--- a/dribbble/src/main/res/layout/recycler_view_item.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item.xml
@@ -2,30 +2,31 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="1dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="2dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true"
-    app:contentPadding="10dp">
+    app:contentPadding="4dp">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <com.loopj.android.image.SmartImageView
             android:id="@+id/image_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_width="wrap_content"
+            android:layout_height="140dp"
             android:src="@mipmap/ic_launcher"/>
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="16dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:layout_height="16dp">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -54,19 +55,13 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_heart"/>
 
-
             <TextView
                 android:id="@+id/likes_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-
-
         </LinearLayout>
 
-
     </RelativeLayout>
-
-
 
 </android.support.v7.widget.CardView>
