--- a/dribbble/src/main/res/layout/recycler_view_item.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item.xml
@@ -16,8 +16,10 @@
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:src="@mipmap/ic_launcher"/>
 
         <LinearLayout
