--- a/dribbble/src/main/res/layout/content_main.xml
+++ b/dribbble/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_refresh"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,12 +12,6 @@
     tools:context="com.tangshiba.dribbble.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
@@ -25,4 +20,4 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
