--- a/dribbble/src/main/res/layout/recycler_view_item.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item.xml
@@ -2,14 +2,14 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="2dp"
     app:cardPreventCornerOverlap="true"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -17,71 +17,72 @@
             android:id="@+id/iv_shot_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"/>
+            android:adjustViewBounds="true"/>
 
         <LinearLayout
+            android:id="@+id/ll_user"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv_shot_image"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin">
 
             <ImageView
                 android:id="@+id/iv_user_avatar"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="@dimen/ic_avatar"
+                android:layout_height="@dimen/ic_avatar"
                 android:gravity="center_vertical"/>
 
             <TextView
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:text="{shot.user.name}"/>
+                android:gravity="center_vertical"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/ll_user"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="4dp">
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/ic_icon"
+                android:layout_height="@dimen/ic_icon"
                 android:src="@mipmap/ic_eye"/>
 
             <TextView
                 android:id="@+id/tv_views_count"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="{shot.viewsCount}"/>
+                android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/ic_icon"
+                android:layout_height="@dimen/ic_icon"
                 android:src="@mipmap/ic_message"/>
-
 
             <TextView
                 android:id="@+id/tv_comments_count"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="{shot.commentsCount}"/>
+                android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/ic_icon"
+                android:layout_height="@dimen/ic_icon"
                 android:src="@mipmap/ic_heart"/>
 
             <TextView
                 android:id="@+id/tv_likes_count"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="{shot.likesCount}"/>
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
