--- a/dribbble/src/main/res/values/dimens.xml
+++ b/dribbble/src/main/res/values/dimens.xml
@@ -6,4 +6,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="ic_avatar">40dp</dimen>
+    <dimen name="ic_avatar_small">24dp</dimen>
+    <dimen name="ic_icon">16dp</dimen>
+
 </resources>
