--- a/dribbble/src/main/res/layout/content_main.xml
+++ b/dribbble/src/main/res/layout/content_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.tangshiba.dribbble.MainActivity"
+    tools:context="com.tangshiba.dribbble.ui.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
     <android.support.v7.widget.RecyclerView
