--- a/dribbble/src/main/res/layout/recycler_view_item.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item.xml
@@ -24,19 +24,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/iv_shot_image"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin">
+            android:layout_marginBottom="@dimen/activity_vertical_margin_mini"
+            android:layout_marginTop="@dimen/activity_vertical_margin_mini"
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/iv_user_avatar"
-                android:layout_width="@dimen/ic_avatar"
-                android:layout_height="@dimen/ic_avatar"
+                android:layout_width="@dimen/ic_avatar_mini"
+                android:layout_height="@dimen/ic_avatar_mini"
                 android:gravity="center_vertical"/>
 
             <TextView
                 android:id="@+id/tv_user_name"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:gravity="center_vertical"/>
 
         </LinearLayout>
@@ -46,8 +48,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/ll_user"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
