--- a/dribbble/src/main/res/values/dimens.xml
+++ b/dribbble/src/main/res/values/dimens.xml
@@ -5,10 +5,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin_mini">8dp</dimen>
+    <dimen name="activity_vertical_margin_mini">8dp</dimen>
+
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="ic_avatar">40dp</dimen>
-    <dimen name="ic_avatar_small">24dp</dimen>
+    <dimen name="ic_avatar_mini">20dp</dimen>
     <dimen name="ic_icon">16dp</dimen>
 
 </resources>
