--- a/dribbble/src/main/res/layout/app_bar_main.xml
+++ b/dribbble/src/main/res/layout/app_bar_main.xml
@@ -21,6 +21,13 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.design.widget.TabLayout>
+
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main"/>
