--- a/dribbble/src/main/res/layout/content_main.xml
+++ b/dribbble/src/main/res/layout/content_main.xml
@@ -12,6 +12,13 @@
     tools:context="com.tangshiba.dribbble.ui.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v4.view.ViewPager>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
