--- a/dribbble/src/main/res/layout/fragment_shops.xml
+++ b/dribbble/src/main/res/layout/fragment_shops.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.tangshiba.dribbble.ui.fragment.JobFragment">
+             tools:context=".ui.fragment.ShopsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
