--- a/dribbble/src/main/res/layout/fragment_teams.xml
+++ b/dribbble/src/main/res/layout/fragment_teams.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".ui.fragment.TeamFragment">
+             tools:context=".ui.fragment.TeamsFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
