--- a/dribbble/src/main/res/layout/content_main.xml
+++ b/dribbble/src/main/res/layout/content_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-    android:id="@+id/swipe_refresh"
+<RelativeLayout
+    android:id="@+id/view_pager_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,12 +19,4 @@
 
     </android.support.v4.view.ViewPager>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-    </android.support.v7.widget.RecyclerView>
-
-</android.support.v4.widget.SwipeRefreshLayout>
+</RelativeLayout>
