--- a/dribbble/src/main/res/layout/app_bar_main.xml
+++ b/dribbble/src/main/res/layout/app_bar_main.xml
@@ -24,7 +24,10 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:tabGravity="center"
+            app:tabMode="scrollable"
+            app:tabTextAppearance="@style/CustomTabTextAppearance">
 
         </android.support.design.widget.TabLayout>
 
