--- a/dribbble/src/main/res/layout/fragment_shots.xml
+++ b/dribbble/src/main/res/layout/fragment_shots.xml
@@ -6,6 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tangshiba.dribbble.ui.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
