--- a/dribbble/src/main/res/layout/fragment_shots.xml
+++ b/dribbble/src/main/res/layout/fragment_shots.xml
@@ -6,8 +6,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.tangshiba.dribbble.ui.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
@@ -15,9 +13,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_shot"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent" />
 
 </android.support.v4.widget.SwipeRefreshLayout>
