--- a/dribbble/src/main/res/layout/recycler_view_item_shot.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item_shot.xml
@@ -16,40 +16,38 @@
         <ImageView
             android:id="@+id/iv_shot_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true"
+            android:layout_height="wrap_content"/>
 
-        <LinearLayout
-            android:id="@+id/ll_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_shot_image"
-            android:layout_marginBottom="@dimen/activity_vertical_margin_mini"
-            android:layout_marginTop="@dimen/activity_vertical_margin_mini"
-            android:gravity="center_vertical"
-            android:padding="@dimen/activity_vertical_margin">
+        <!--<LinearLayout-->
+            <!--android:id="@+id/ll_user"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_below="@+id/iv_shot_image"-->
+            <!--android:gravity="center_vertical"-->
+            <!--android:padding="@dimen/activity_vertical_margin_mini">-->
 
-            <ImageView
-                android:id="@+id/iv_user_avatar"
-                android:layout_width="@dimen/ic_avatar"
-                android:layout_height="@dimen/ic_avatar"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin_mini"
-                android:layout_marginRight="@dimen/activity_horizontal_margin_mini"
-                android:gravity="center_vertical"/>
+            <!--<ImageView-->
+                <!--android:id="@+id/iv_user_avatar"-->
+                <!--android:layout_width="@dimen/ic_avatar_mini"-->
+                <!--android:layout_height="@dimen/ic_avatar_mini"-->
+                <!--android:layout_marginLeft="@dimen/activity_horizontal_margin_mini"-->
+                <!--android:layout_marginRight="@dimen/activity_horizontal_margin_mini"-->
+                <!--android:gravity="center_vertical"/>-->
 
-            <TextView
-                android:id="@+id/tv_user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"/>
+            <!--<TextView-->
+                <!--android:id="@+id/tv_user_name"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:gravity="center_vertical"/>-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/ll_user"
+            android:layout_below="@+id/iv_shot_image"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="@dimen/activity_vertical_margin_mini">
