--- a/dribbble/src/main/res/layout/recycler_view_item_shot.xml
+++ b/dribbble/src/main/res/layout/recycler_view_item_shot.xml
@@ -57,7 +57,7 @@
             <ImageView
                 android:layout_width="@dimen/ic_icon"
                 android:layout_height="@dimen/ic_icon"
-                android:src="@mipmap/ic_eye"/>
+                android:src="@drawable/ic_eye"/>
 
             <TextView
                 android:id="@+id/tv_views_count"
@@ -67,7 +67,7 @@
             <ImageView
                 android:layout_width="@dimen/ic_icon"
                 android:layout_height="@dimen/ic_icon"
-                android:src="@mipmap/ic_message"/>
+                android:src="@drawable/ic_message"/>
 
             <TextView
                 android:id="@+id/tv_comments_count"
@@ -77,7 +77,7 @@
             <ImageView
                 android:layout_width="@dimen/ic_icon"
                 android:layout_height="@dimen/ic_icon"
-                android:src="@mipmap/ic_heart"/>
+                android:src="@drawable/ic_heart"/>
 
             <TextView
                 android:id="@+id/tv_likes_count"
